début et presque fin sonarlint